@@ -4,7 +4,6 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
 import java.util.List;
@@ -16,18 +15,21 @@ public class CorsConfig {
     public UrlBasedCorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // Permitir peticiones desde cualquier origen (en producción, restringir esto)
-        config.setAllowedOrigins(List.of("*"));
+        // Acepta cualquier origen — en producción reemplaza "*" por tu dominio real
+        // Nota: allowedOriginPatterns("*") es compatible con allowCredentials(true)
+        config.setAllowedOriginPatterns(List.of("*"));
 
-        // Métodos HTTP permitidos
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        config.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
+        ));
 
-        // Headers permitidos
-        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "Origin",
-                "X-Requested-With", "Access-Control-Request-Method", "Access-Control-Request-Headers"));
+        config.setAllowedHeaders(List.of("*"));
 
-        // Exponer headers en la respuesta
+        config.setAllowCredentials(true);
+
         config.setExposedHeaders(Arrays.asList("Authorization", "Content-Disposition"));
+
+        config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
